--- a/BrnoParkingIS/BrnoParkingIS.csproj
+++ b/BrnoParkingIS/BrnoParkingIS.csproj
@@ -122,11 +122,18 @@
     </Compile>
     <Compile Include="Modules\Car.cs" />
     <Compile Include="Modules\Parkings.cs" />
+    <Compile Include="ViewModels\CarViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
+    <Compile Include="Views\CarModulePage.xaml.cs">
+      <DependentUpon>CarModulePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ParkingModulePage.xaml.cs">
+      <DependentUpon>ParkingModulePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
     </Compile>
@@ -151,9 +158,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\CarModulePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ParkingModulePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Shell.xaml">
       <SubType>Designer</SubType>
@@ -165,10 +180,10 @@
       <Version>2.0.6</Version>
     </PackageReference>
     <PackageReference Include="ISUF.Storage">
-      <Version>0.3.16-beta</Version>
+      <Version>0.3.19-beta</Version>
     </PackageReference>
     <PackageReference Include="ISUF.UI">
-      <Version>0.3.16-beta</Version>
+      <Version>0.3.19-beta</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
