--- a/BrnoParkingIS/BrnoParkingIS.csproj
+++ b/BrnoParkingIS/BrnoParkingIS.csproj
@@ -123,6 +123,9 @@
     <Compile Include="Controls\AddItem.xaml.cs">
       <DependentUpon>AddItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\DetailItem.xaml.cs">
+      <DependentUpon>DetailItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Modules\Car.cs" />
     <Compile Include="Modules\Parkings.cs" />
     <Compile Include="ViewModels\CarViewModel.cs" />
@@ -166,6 +169,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\DetailItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\CarModulePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -188,16 +195,16 @@
       <Version>2.0.6</Version>
     </PackageReference>
     <PackageReference Include="ISUF.Security">
-      <Version>0.3.21-beta</Version>
+      <Version>0.4.1-beta</Version>
     </PackageReference>
     <PackageReference Include="ISUF.UI">
-      <Version>0.3.21-beta</Version>
+      <Version>0.4.1-beta</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>5.1.1</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>10.0.3</Version>
