Implementation of linked table selector and Parking module

--- a/BrnoParkingIS/BrnoParkingIS.csproj
+++ b/BrnoParkingIS/BrnoParkingIS.csproj
@@ -127,10 +127,12 @@
       <DependentUpon>DetailItem.xaml</DependentUpon>
     </Compile>
     <Compile Include="Modules\Car.cs" />
-    <Compile Include="Modules\Parkings.cs" />
+    <Compile Include="Modules\Parking.cs" />
     <Compile Include="ViewModels\CarViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\CarAddViewModel.cs" />
+    <Compile Include="ViewModels\ParkingAddViewModel.cs" />
+    <Compile Include="ViewModels\ParkingViewModel.cs" />
     <Compile Include="Views\CarModulePage.xaml.cs">
       <DependentUpon>CarModulePage.xaml</DependentUpon>
     </Compile>
@@ -195,10 +197,10 @@
       <Version>2.0.6</Version>
     </PackageReference>
     <PackageReference Include="ISUF.Security">
-      <Version>0.4.1-beta</Version>
+      <Version>0.4.2-beta</Version>
     </PackageReference>
     <PackageReference Include="ISUF.UI">
-      <Version>0.4.1-beta</Version>
+      <Version>0.4.2-beta</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
